--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "angular-ui-router": "^0.2.14"
   },
   "devDependencies": {
+    "jquery": "^2.1.3",
     "angular-mocks": "^1.2.26",
     "sinon": "1.9.0",
     "jasmine-sinon": "0.3.1"
